update github action script for batch deploy

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -12,7 +12,7 @@ permissions:
   actions: read
 
 jobs:
-  build:
+  deploy:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
