--- a/.github/workflows/deploy_stg.yml
+++ b/.github/workflows/deploy_stg.yml
@@ -12,7 +12,7 @@ permissions:
   actions: read
 
 jobs:
-  build:
+  build_stg:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
@@ -72,7 +72,7 @@ jobs:
   deploy:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
       #&& needs.build.outputs.skip_deploy == 'false'
-    needs: build
+    needs: build_stg
     runs-on: ubuntu-latest
 
     steps:
